# hdf5view

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
hdf5view/: __init__.py  main.py  mainwindow.py  models.py  views.py
hdf5view/resources/: resources.py  resources.qrc
hdf5view/resources/images/: blank_image.h5
src/hdf5view/: __init__.py  main.py  mainwindow.py  models.py  views.py
