[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdf5view"
description = 'HDF5View is a python based HDF5 file viewer built on PyQt5/PySide2/PyQt6/PySide6, QtPy, h5py and pyqtgraph.'
authors = [
    {name = "Martin Swarbrick"},
    {name = "Thomas G. Woodcock"},
]
maintainers = [{name = "Thomas G. Woodcock"},]
license = {file = "LICENSE"}

classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Development Status :: 3 - Alpha',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering :: Visualization',
]
keywords = ["research", "data", "management", "visualization", "hdf5", "viewer"]
requires-python = ">=3.6"
dependencies = [
    "h5py",
    "qtpy",
    "pyqtgraph"
]
dynamic = ["version"]

[project.readme]
'file' = "README.md"
'content-type' = "text/markdown"

[project.urls]
'Source' = 'https://github.com/marts/hdf5view/'
'Bug Tracker' = 'https://github.com/marts/hdf5view/issues'

[project.gui-scripts]
hdf5view = "hdf5view.main:main"

[tool.setuptools.dynamic]
version = {attr = "hdf5view.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hdf5view.resources.images" = ["*.svg", "*.ico"]
